
	* examples/hello_world.c, examples/playfile.c ,include/AL/alut.h,
	src/alutUtil.c, test_suite/test_fileloader.c,
	test_suite/test_memoryloader.c, test_suite/test_retrostuff.c,
	test_suite/test_waveforms.c: Synched implementation with latest
	spec changes.

	* doc/alut.html: As discussed on the mailing list, sleeping is now
	done via an ALfloat. This is more consinstent with physical
	reality and alutCreateBufferWaveform.

	* src/alutLoader.c: Re-indented.

2005-10-24  Sven Panne  <sven.panne@aedion.de>

	* src/alutLoader.c, src/alutWaveform.c: Added a few harmless casts
	where Visual Studio was complaining about a possible loss of
	precision.

	* admin/alut.vcproj: Added the recently introduced source files.

2005-10-10  Sven Panne  <sven.panne@aedion.de>

	* examples/playfile.c: Added missing alutExit call.

2005-10-21  Sven Panne  <sven.panne@aedion.de>

	* admin/freealut.spec: Added. Note that the neededforbuild and
	BuildRequires info is not yet correct, need to figure out how to
	compute those.

	* Makefile.am: Unbreak "make dist". Added documentation.

2005-10-05  Sven Panne  <sven.panne@aedion.de>

	* src/Makefile.am, src/alutInputStream.c, src/alutInternal.h,
	src/alutLoader.c: Factored out codecs. Simplified stream
	interface.

	* src/alutCodec.c: Added.

	* src/alutBufferData.c, src/alutInputStream.c, src/alutInternal.h,
	src/alutLoader.c, src/alutUtil.c, src/alutWaveform.c: More heavy
	refactoring, mainly making the buffer data an abstract data type.

	* test_suite/test_errorstuff.c, test_suite/test_fileloader.c,
	test_suite/test_memoryloader.c, test_suite/test_retrostuff.c,
	test_suite/test_version.c, test_suite/test_waveforms.c: Cleaned up
	and fixed the test suite (always call alutExit before exiting,
	test for AL_NONE instead of 0, no repetitions, more error checks,
	return EXIT_FAILURE on failure).

	* src/alutBufferData.c, src/alutInputStream.c: Forgot to re-indent
	these...

2005-09-30  Sven Panne  <sven.panne@aedion.de>
